--- a/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
@@ -1,31 +1,21 @@
 nav(class="navbar navbar-expand-lg navbar-light bg-light")
 
-  a(class="navbar-brand" href="#") Navbar
-  button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+  a(class="navbar-brand" href="/") Express Tutorial
+  button(class="navbar-toggler"
+  type="button"
+  data-toggle="collapse"
+  data-target="#navbarSupportedContent"
+  aria-controls="navbarSupportedContent"
+  aria-expanded="false"
+  aria-label="Toggle navigation")
     span(class="navbar-toggler-icon")
 
   #navbarSupportedContent.collapse.navbar-collapse
     ul(class="navbar-nav mr-auto")
 
       li(class="nav-item active")
-        a(class="nav-link" href="#") Home
+        a(class="nav-link" href="/") Home
           span(class="sr-only") (current)
 
       li(class="nav-item")
-        a(class="nav-link" href="#") Link
-
-      li(class="nav-item dropdown")
-        a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown
-
-        .dropdown-menu(aria-labelledby="navbarDropdown")
-          a(class="dropdown-item" href="#") Action
-          a(class="dropdown-item" href="#") Another action
-          .dropdown-divider
-          a(class="dropdown-item" href="#") Something else here
-
-      li(class="nav-item")
-        a(class="nav-link disabled" href="#") Disabled
-
-    form(class="form-inline my-2 my-lg-0")
-      input(class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search")
-      button(class="btn btn-outline-success my-2 my-sm-0" type="submit") Search
+        a(class="nav-link" href="/about") About
