--- a/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
@@ -1,6 +1,8 @@
 nav(class="navbar navbar-expand-lg navbar-light bg-light")
 
-  a(class="navbar-brand" href="/") Express Tutorial
+  //- a(class="navbar-brand" href="/")
+  img(src="img/image-01.png" alt="Express Tutorial" style="width: 10%;")
+
   button(class="navbar-toggler"
   type="button"
   data-toggle="collapse"
@@ -19,3 +21,6 @@ nav(class="navbar navbar-expand-lg navbar-light bg-light")
 
       li(class="nav-item")
         a(class="nav-link" href="/about") About
+
+      li(class="nav-item")
+        a(class="nav-link" href="/contact") Contact
