--- a/dir/javascript/express/express-tutorial/_project/views/contact.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/contact.jade
@@ -12,7 +12,8 @@ block content
     action="/process?form=contactus"
     method="POST")
 
-      input(type="hidden" name="_csrf" value="")
+      - testCred = "Whatever"
+      input(type="hidden" name="_csrf" value="#{testCred}")
 
       .form-group
         label(for="formEmail" class="col-sm-2 control-label") Email
