--- a/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/partials/navbar.jade
@@ -23,4 +23,7 @@ nav(class="navbar navbar-expand-lg navbar-light bg-light")
         a(class="nav-link" href="/about") About
 
       li(class="nav-item")
+        a(class="nav-link" href="/upload") Upload
+
+      li(class="nav-item")
         a(class="nav-link" href="/contact") Contact
