--- a/dir/javascript/express/express-tutorial/_project/views/upload.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/upload.jade
@@ -9,7 +9,7 @@ block content
     role="form"
     enctype="multipart/form-data"
     method="POST"
-    action="/upload/3000/10")
+    action="/upload/#{year}/#{month}")
 
       .form-group
         label(for="uploadName" class="col-sm-2 control-label") Name
