--- a/dir/javascript/express/express-tutorial/_project/views/index.jade
+++ b/dir/javascript/express/express-tutorial/_project/views/index.jade
@@ -16,3 +16,10 @@ block content
   ul
     li
       a(href="/viewcount") View Count
+
+  h4 Read And Write
+  ul
+    li
+      a(href="/readfile") Read Text File
+    li
+      a(href="/writefile") Write Text File 
