--- a/dir/javascript/auth0/auth0/javascript/_project/views/index.jade
+++ b/dir/javascript/auth0/auth0/javascript/_project/views/index.jade
@@ -2,4 +2,4 @@ extends ./layouts/access
 
 block content
   h1 Login
-  button(id="btn-login" value="Sign In" type="button" class="btn btn-secondary" style="width: inherit;") Sign In
+  // button(id="btn-login" value="Sign In" type="button" class="btn btn-secondary" style="width: inherit;") Sign In
