--- a/dir/javascript/auth0/auth0/javascript/_project/views/layouts/access.jade
+++ b/dir/javascript/auth0/auth0/javascript/_project/views/layouts/access.jade
@@ -3,11 +3,15 @@ html
   include ../partials/head.jade
   body
 
+    include ../partials/user-nav.jade
+    include ../partials/access-nav.jade
+
     div(class="container")
 
       block content
 
-    script(type="text/javascript" src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js")
+    // script(type="text/javascript" src="../node_modules/auth0-js/build/auth0.js")
+    script(src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js")
 
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
 
