--- a/dir/javascript/jquery/try-jquery/introduction-to-jquery/_project/views/index.jade
+++ b/dir/javascript/jquery/try-jquery/introduction-to-jquery/_project/views/index.jade
@@ -5,3 +5,7 @@ block content
   h1 Introduction To jQuery
   h2 Where do you want to go?
   p Plan your next adventure.
+  ul(id="destinations")
+    li Rome
+    li Paris
+    li(class='promo') Rio
