--- a/dir/languages/javascript/jquery/try-jquery/working-with-the-dom/_project/views/index.jade
+++ b/dir/languages/javascript/jquery/try-jquery/working-with-the-dom/_project/views/index.jade
@@ -12,8 +12,8 @@ block content
 
   .row
     .col-md-4
-      .card
-        .card-body.vacation(data-price="2399.99")
+      .card.vacation.expiring
+        .card-body(data-price="2399.99")
           h4(class="card-title") Hawaiian Vacation
           p
             strong Comments On This Deal
@@ -25,8 +25,8 @@ block content
           button(class="btn btn-primary") Get Price
 
     .col-md-4
-      .card
-        .card-body.vacation(data-price="1999.99")
+      .card.vacation.expiring
+        .card-body(data-price="1999.99")
           h4(class="card-title") Hawaiian Vacation
           p
             strong Comments On This Deal
@@ -38,8 +38,8 @@ block content
           button(class="btn btn-primary") Get Price
 
     .col-md-4
-      .card
-        .card-body.vacation(data-price="999.99")
+      .card.vacation.onsale
+        .card-body(data-price="999.99")
           h4(class="card-title") Hawaiian Vacation
           p
             strong Comments On This Deal
