--- a/dir/languages/javascript/jquery/try-jquery/styling/_project/public/css/style.css
+++ b/dir/languages/javascript/jquery/try-jquery/styling/_project/public/css/style.css
@@ -1,6 +1,41 @@
-h1{
-  font-size: 3em;
+h1 {
+  font-size: 24px;
+  margin-top: 50px;
 }
-p{
-  color: blue;
+h2 {
+  font-size: 18px;
+  margin-bottom: 50px;
+}
+h3 {
+  font-size: 14px;
+}
+p {
+  font-size: 14px;
+  margin-top: 25px;
+}
+.card {
+  cursor: pointer;
+}
+.price {
+  display: none;
+}
+.highlighted {
+	background-color: rgb(109, 189, 255);
+  border: 3px solid rgba(0, 90, 171, 0.29);
+  top: -10px;
+}
+.highlighted .price {
+	display: block;
+}
+.vacation {
+	-moz-transition: top 0.2s;
+	-o-transition: top 0.2s;
+	-webkit-transition: top 0.2s;
+  top: 0px;
+  transition: top 0.2s;
+}
+.highlighted {
+	background-color: rgb(109, 189, 255);
+  border: 3px solid rgba(0, 90, 171, 0.29);
+  top: -10px;
 }
