--- a/dir/languages/javascript/ajax/ajax-crash-course/_project/views/get-text-file.jade
+++ b/dir/languages/javascript/ajax/ajax-crash-course/_project/views/get-text-file.jade
@@ -6,11 +6,16 @@ block content
   small
 
   .jumbotron
-    h1(class="display-3") #{title}
-    p(class="lead") #{description}
-    hr(class="my-4")
-    p It uses utility classes for typography and spacing to space content out within the larger container.
+
+    h3 #{title} 
+      small(class="text-muted") #{description}
+
     p(class="lead")
       button(id="button" class="btn btn-primary btn-lg" role="button") Get Text File!
+
+    hr(class="my-4")
+
+    blockquote(class="blockquote")
+      #textGoesHere.mb-0
 
   script(src="js/get-text-file.js")
