--- a/dir/languages/javascript/ajax/ajax-crash-course/_project/views/partials/nav.jade
+++ b/dir/languages/javascript/ajax/ajax-crash-course/_project/views/partials/nav.jade
@@ -18,4 +18,7 @@ nav(class="navbar navbar-expand-lg navbar-light bg-light")
           span(class="sr-only") (current)
 
       li(class="nav-item")
-        a(class="nav-link" href="/get-text-file") Get Text File
+        a(class="nav-link" href="/get-text-file") Text
+
+      li(class="nav-item")
+        a(class="nav-link" href="/get-json-file") JSON
