--- a/dir/languages/javascript/ajax/ajax-crash-course/_project/views/partials/nav.jade
+++ b/dir/languages/javascript/ajax/ajax-crash-course/_project/views/partials/nav.jade
@@ -22,3 +22,6 @@ nav(class="navbar navbar-expand-lg navbar-light bg-light")
 
       li(class="nav-item")
         a(class="nav-link" href="/get-json-file") JSON
+
+      li(class="nav-item")
+        a(class="nav-link" href="/external-api") External API
