--- a/dir/languages/javascript/ajax/ajax-crash-course/_project/views/get-php.jade
+++ b/dir/languages/javascript/ajax/ajax-crash-course/_project/views/get-php.jade
@@ -11,7 +11,7 @@ block content
       small(class="text-muted") #{description}
 
     p(class="lead")
-      button(id="button" class="btn btn-primary btn-lg" role="button") Get PHP
+      button(id="bigButton" class="btn btn-primary btn-lg" role="button") Get PHP
 
     hr(class="my-4")
 
@@ -34,6 +34,6 @@ block content
             span(class="input-group-btn")
               button(class="btn btn-secondary" type="submit") Submit
 
-          h1(id="displayName" class="display-4")
+          h1(id="displayName2" class="display-4")
 
   script(src="js/get-php.js")
