--- a/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/public/css/style.css
+++ b/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/public/css/style.css
@@ -1,11 +1,16 @@
 .container-1 {
-  display: flex; }
+  align-items: center;
+  display: flex;
+  flex-direction: column; }
   .container-1 div {
     border: 1px #CCCCCC solid;
     padding: 11px; }
   .container-1 .box-1 {
-    flex: 1; }
+    flex: 2;
+    order: 2; }
   .container-1 .box-2 {
-    flex: 2; }
+    flex: 1;
+    order: 1; }
   .container-1 .box-3 {
-    flex: 1; }
+    flex: 1;
+    order: 3; }
