--- a/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/src/sass/style.scss
+++ b/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/src/sass/style.scss
@@ -1,23 +1,19 @@
 
 .container-1 {
-  align-items: center;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 
   div {
     border: 1px #CCCCCC solid;
     padding: 11px;
   }
   .box-1 {
-    flex: 2;
-    order: 2;
+    width: 27%;
   }
   .box-2 {
-    flex: 1;
-    order: 1;
+    width: 27%;
   }
   .box-3 {
-    flex: 1;
-    order: 3;
+    width: 27%;
   }
 }
