--- a/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/src/sass/style.scss
+++ b/dir/languages/css/layout/flexbox/flexbox-css-in-20-minutes/_project/src/sass/style.scss
@@ -1,19 +1,12 @@
 
 .container-1 {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   div {
     border: 1px #CCCCCC solid;
     padding: 11px;
-  }
-  .box-1 {
-    width: 27%;
-  }
-  .box-2 {
-    width: 27%;
-  }
-  .box-3 {
-    width: 27%;
+    flex-basis: 27%;
   }
 }
