--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/index.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/index.pug
@@ -2,4 +2,19 @@ extends layouts/auth.pug
 
 block content
 
-  h1 Login
+  h1(style="margin-top:25px;") Login
+
+  .card
+    .card-body
+      h4(class="card-title") Card title
+      h6(class="card-subtitle mb-2 text-muted") Card subtitle
+      form(method="post" action="/users/login")
+        .form-group
+          label Username
+          input(type="text" class="form-control" placeholder="Username")
+
+        .form-group
+          label Password
+          input(type="text" class="form-control" placeholder="Password")
+
+        button(type="submit" class="btn btn-warning" style="width: 100%; cursor: pointer;") Submit
