--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/partials/head.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/partials/head.pug
@@ -13,10 +13,11 @@ head
   // CSS - THIRD PARTY
   link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto")
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
+  link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
   // link(rel="stylesheet" href="scripts/bootstrap/dist/css/bootstrap.min.css")
 
   // CSS - APPLICATION
-  link(rel="stylesheet" href="css/style.css")
+  link(rel="stylesheet" href="/css/style.css")
 
   // SCRIPTS - THIRD PARTY
   // script(src="scripts/jquery/dist/jquery.min.js")
