--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/layouts/auth.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/layouts/auth.pug
@@ -8,5 +8,20 @@ html
     include ../partials/nav.pug
 
     .container
-    
+
+      if(success_msg)
+      .row
+        .col-lg-12
+          .alert.alert-success= success_msg
+
+      if(error_msg)
+        .row
+          .col-lg-12
+            .alert.alert-danger= error_msg
+
+      if(error)
+        .row
+          .col-lg-12
+            .alert.alert-danger= error
+
       block content
