--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/register.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/register.pug
@@ -4,6 +4,10 @@ block content
 
   h1(style="margin-top:25px;") Register
 
+  if(errors)
+    each error in errors
+      .alert.alert-danger= error.msg
+
   .card
     .card-body
       h4(class="card-title") Card title
@@ -15,7 +19,7 @@ block content
 
         .form-group
           label Username
-          input(type="text" class="form-control" placeholder="Username" name="Username")
+          input(type="text" class="form-control" placeholder="Username" name="username")
 
         .form-group
           label email
