--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/dashboard.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/dashboard.pug
@@ -2,4 +2,13 @@ extends layouts/auth.pug
 
 block content
 
-  h1(style="margin-top:25px;") Dashboard
+  if(user)
+
+    h1(style="margin-top:25px;") Dashboard
+
+    a(href="users/logout" class="btn btn-warning") Sign Out.
+
+  else
+
+    h1 You Are Not Logged In
+    a(href="users/login") Sign In
