--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/partials/nav.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/partials/nav.pug
@@ -7,12 +7,10 @@ nav(class="navbar navbar-expand-lg navbar-light bg-light")
   div(class="collapse navbar-collapse" id="navbarSupportedContent")
     ul(class="navbar-nav mr-auto")
 
+    if(users)
       li(class="nav-item active")
         a(class="nav-link" href="/dashboard") Dashboard
           span(class="sr-only") (current)
 
       li(class="nav-item")
-        a(class="nav-link" href="/users/register") Register
-
-      li(class="nav-item")
-        a(class="nav-link" href="/users/logout") Login
+        a(class="nav-link" href="/users/logout") Sign Out
