--- a/dir/languages/javascript/passport/login-system-with-passport/_project/views/register.pug
+++ b/dir/languages/javascript/passport/login-system-with-passport/_project/views/register.pug
@@ -4,6 +4,8 @@ block content
 
   h1(style="margin-top:25px;") Register
 
+  include partials/bread-crumbs.pug
+  
   if(errors)
     each error in errors
       .alert.alert-danger= error.msg
