--- a/dir/languages/javascript/gamedev/super-mario/_project/views/partials/head.pug
+++ b/dir/languages/javascript/gamedev/super-mario/_project/views/partials/head.pug
@@ -1,12 +1,21 @@
+
+//- META
 meta(charset='UTF-8')
-// If IE use the latest rendering engine
+//- If IE use the latest rendering engine
 meta(http-equiv='X-UA-Compatible' content='IE=edge')
-// Set the page to the width of the device and set the zoom level
+//- Set the page to the width of the device and set the zoom level
 meta(name='viewport' content='width = device-width, initial-scale = 1')
-// SEO META
+//- SEO META
 meta(name="description" content="#{description}")
 title #{title}
-// Include BootStrap 4
+
+
+//- THIRD PARTY LIBRARIES
+//- Include BootStrap 4 CSS
 link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
-// jQuery ???
+//- JQUERY
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+
+
+//- CSS
+link(rel="stylesheet" href="/css/style.css")
