--- a/dir/languages/javascript/gamedev/super-mario/_project/src/scss/style.scss
+++ b/dir/languages/javascript/gamedev/super-mario/_project/src/scss/style.scss
@@ -1,6 +1,6 @@
 #screen {
   background-color: rgba(0, 255, 255, 0.2);
-  height: 100%;
+  height: inherit;
   left: 0;
   position: absolute;
   top: 0;
