--- a/dir/languages/css/animation/css-animations-series/_project/views/index.pug
+++ b/dir/languages/css/animation/css-animations-series/_project/views/index.pug
@@ -1,5 +1,14 @@
 extends ./layouts/default.pug
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Transitions
+
+  ul(id="example-01")
+    li(id="trigger-01")
+      span(id="element-01") Element 1
+    li(id="trigger-02")
+      span(id="element-02") Element 2
+    li(id="trigger-03")
+      span(id="element-03") Element 3
+    li(id="trigger-04")
+      span(id="element-04") Element 4
