--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/mixins/_theme-default.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/mixins/_theme-default.scss
@@ -2,6 +2,7 @@
   background-color: rgba(240, 240, 240, 0.2);
   border-bottom: 1px solid $color;
   display: block;
+  margin-top: 50px;
   width: 100%;
   z-index: 100;
 }
