--- a/dir/languages/css/animation/css-animations-series/_project/views/partials/keyframes.pug
+++ b/dir/languages/css/animation/css-animations-series/_project/views/partials/keyframes.pug
@@ -1,1 +1,15 @@
 h1 Keyframes & Animation
+
+ul(id="keyframes")
+
+  li(class="kyfrm-container")
+    span(id="kyfrm-element-01") Element 1
+
+  li(class="kyfrm-container")
+    span(id="kyfrm-element-02") Element 2
+
+  li(class="kyfrm-container")
+    span(id="kyfrm-element-03") Element 3
+
+  li(class="kyfrm-container")
+    span(id="kyfrm-element-04") Element 4
