--- a/dir/languages/css/animation/css-animations-series/_project/views/partials/transitions.pug
+++ b/dir/languages/css/animation/css-animations-series/_project/views/partials/transitions.pug
@@ -1,11 +1,15 @@
 h1 Transitions
 
-ul(id="example-01")
-  li(id="trigger-01")
-    span(id="element-01") Element 1
-  li(id="trigger-02")
-    span(id="element-02") Element 2
-  li(id="trigger-03")
-    span(id="element-03") Element 3
-  li(id="trigger-04")
-    span(id="element-04") Element 4
+ul(id="transitions")
+
+  li(class="trnstn-container")
+    span(id="trnstn-element-01") Element 1
+
+  li(class="trnstn-container")
+    span(id="trnstn-element-02") Element 2
+
+  li(class="trnstn-container")
+    span(id="trnstn-element-03") Element 3
+
+  li(class="trnstn-container")
+    span(id="trnstn-element-04") Element 4
