--- a/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
+++ b/dir/languages/css/animation/css-animations-series/_project/public/css/style.css
@@ -11,7 +11,7 @@ h1 {
 /*
 TRANSITIONS
 */
-#example-01 {
+#transitions {
   display: flex;
   list-style: none;
   background-color: aliceblue;
@@ -24,44 +24,72 @@ TRANSITIONS
   -webkit-padding-start: 0;
   /* ONE */
   /* TWO */ }
-  #example-01 li {
+  #transitions li {
     border: 5px #ffffff solid;
     cursor: pointer;
     flex: 1;
     position: relative;
     text-align: center; }
-  #example-01 [id*="element-"] {
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-    top: 0;
-    height: 100%;
-    width: 100%; }
-  #example-01 #trigger-01:hover #element-01 {
+    #transitions li span {
+      position: absolute;
+      left: 0;
+      pointer-events: none;
+      top: 0;
+      height: 100%;
+      width: 100%; }
+  #transitions .trnstn-container:hover #trnstn-element-01 {
     transform: translate(200px, 100px) rotate(10deg); }
-  #example-01 #element-01 {
+  #transitions #trnstn-element-01 {
     transition: transform 300ms cubic-bezier(0.43, -0.01, 0.2, 1) 0ms;
     -webkit-transition: transform 300ms cubic-bezier(0.43, -0.01, 0.2, 1) 0ms;
     -moz-transition: transform 300ms cubic-bezier(0.43, -0.01, 0.2, 1) 0ms;
     -o-transition: transform 300ms cubic-bezier(0.43, -0.01, 0.2, 1) 0ms;
     background-color: #FFF000; }
-  #example-01 #trigger-02.clicked #element-02 {
+  #transitions .trnstn-container.clicked #trnstn-element-02 {
     transform: translate(200px, 100px) rotate(10deg); }
-  #example-01 #element-02 {
+  #transitions #trnstn-element-02 {
     transition: transform 300ms ease-in-out 0ms;
     -webkit-transition: transform 300ms ease-in-out 0ms;
     -moz-transition: transform 300ms ease-in-out 0ms;
     -o-transition: transform 300ms ease-in-out 0ms;
     background-color: #48ff00; }
-  #example-01 #element-03 {
-    transition: opacity 300ms ease-in-out 1s;
-    -webkit-transition: opacity 300ms ease-in-out 1s;
-    -moz-transition: opacity 300ms ease-in-out 1s;
-    -o-transition: opacity 300ms ease-in-out 1s;
+  #transitions #trnstn-element-03 {
     background-color: #00e5ff; }
-  #example-01 #element-04 {
-    transition: opacity 300ms ease-in-out 1s;
-    -webkit-transition: opacity 300ms ease-in-out 1s;
-    -moz-transition: opacity 300ms ease-in-out 1s;
-    -o-transition: opacity 300ms ease-in-out 1s;
+  #transitions #trnstn-element-04 {
     background-color: #ff00d2; }
+
+/*
+KEYFRAMES AND Animations
+*/
+#keyframes {
+  display: flex;
+  list-style: none;
+  background-color: aliceblue;
+  height: 150px;
+  margin-bottom: 0;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 0; }
+  #keyframes li {
+    border: 5px #ffffff solid;
+    cursor: pointer;
+    flex: 1;
+    position: relative;
+    text-align: center; }
+    #keyframes li span {
+      position: absolute;
+      left: 0;
+      pointer-events: none;
+      top: 0;
+      height: 100%;
+      width: 100%; }
+    #keyframes li #kyfrm-element-01 {
+      background-color: #ffa3fb; }
+    #keyframes li #kyfrm-element-02 {
+      background-color: #6cffd8; }
+    #keyframes li #kyfrm-element-03 {
+      background-color: #a3beff; }
+    #keyframes li #kyfrm-element-04 {
+      background-color: #ffe8a3; }
