--- a/dir/languages/css/animation/css-animations-series/_project/src/sass/_transition.scss
+++ b/dir/languages/css/animation/css-animations-series/_project/src/sass/_transition.scss
@@ -1,27 +1,22 @@
 /*
 TRANSITIONS
 */
-#example-01 {
+#transitions {
   @include ul-default;
 
   li {
-    border: 5px #ffffff solid;
-    cursor: pointer;
-    flex: 1;
-    position: relative;
-    text-align: center;
-  }
-  [id*="element-"] {
-    @include element-default;
-  }
+    @include li-default;
 
-
+    span {
+      @include element-default;
+    }
+  }
 
   /* ONE */
-  #trigger-01:hover #element-01 {
+  .trnstn-container:hover #trnstn-element-01 {
     transform: translate(200px, 100px) rotate(10deg);
   }
-  #element-01 {
+  #trnstn-element-01 {
     @include transition-default(transform, 300ms, cubic-bezier(0.43,-0.01, 0.2, 1), 0ms);
     background-color: #FFF000;
   }
@@ -30,10 +25,10 @@ TRANSITIONS
 
 
   /* TWO */
-  #trigger-02.clicked #element-02 {
+  .trnstn-container.clicked #trnstn-element-02 {
     transform: translate(200px, 100px) rotate(10deg);
   }
-  #element-02 {
+  #trnstn-element-02 {
     @include transition-default(transform, 300ms, ease-in-out, 0ms );
     background-color: #48ff00;
   }
@@ -41,12 +36,12 @@ TRANSITIONS
 
 
 
-  #element-03 {
-    @include transition-default(opacity, 300ms, ease-in-out, 1s);
+  #trnstn-element-03 {
     background-color: #00e5ff;
   }
-  #element-04 {
-    @include transition-default(opacity, 300ms, ease-in-out, 1s);
+  #trnstn-element-04 {
     background-color: #ff00d2;
   }
+
+
 }
